Add postgresql dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=Ecommerce
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=ecommerce admin
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 project.image="images/"
 
 #spring.jpa.show-sql=true
@@ -15,3 +20,4 @@ logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.jianquanwang.ecommerce=DEBUG
+
