--- a/ecom-backend/src/main/resources/application.properties
+++ b/ecom-backend/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=Ecommerce
 
+# AWS EC2
+server.port=5000
+
+# H2
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-spring.datasource.username=ecommerce admin
-spring.datasource.password=password
+
+# AWS RDS
+spring.datasource.url=jdbc:postgresql://ecommerceprojectrds.clgke206y4ow.ca-central-1.rds.amazonaws.com:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=rds123456
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 project.image="images/"
