--- a/ecom-backend/src/main/resources/application.properties
+++ b/ecom-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=5000
 #spring.datasource.url=jdbc:h2:mem:test
 
 # AWS RDS
-spring.datasource.url=jdbc:postgresql://ecommerceprojectrds.clgke206y4ow.ca-central-1.rds.amazonaws.com:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://ecommerce-database.clgke206y4ow.ca-central-1.rds.amazonaws.com:5432/ecommerce
 spring.datasource.username=postgres
 spring.datasource.password=rds123456
 
