--- a/ecom-backend/src/main/resources/application.properties
+++ b/ecom-backend/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.port=5000
 #spring.datasource.url=jdbc:h2:mem:test
 
 # AWS RDS
-spring.datasource.url=jdbc:postgresql://ecommerce-database.clgke206y4ow.ca-central-1.rds.amazonaws.com:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=postgres
-spring.datasource.password=rds123456
+spring.datasource.password=957966
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -28,3 +28,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.jianquanwang.ecommerce=DEBUG
 
+image.base.url=http://localhost:8080/images
