--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,51 @@
-HELP.md
-target/
-!ecom-backend/.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-ecom-backend/.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Backend
+ecom-backend/target/
+ecom-backend/.mvn/wrapper/maven-wrapper.jar
+ecom-backend/.mvn/wrapper/maven-wrapper.properties
+ecom-backend/out/
+
+# Frontend
+ecom-frontend/node_modules/
+ecom-frontend/dist/
+ecom-frontend/build/
+
+# Docker
+.dockerignore
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
+
+# CI/CD
+.github/workflows/*.log
+
+# Build artifacts
+*.jar
+*.war
+*.ear
+*.class
