--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,15 +26,15 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: ''21''
-          distribution: ''temurin''
+          java-version: '21'
+          distribution: 'temurin'
           cache: maven
 
       - name: Set up Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: ''18''
-          cache: ''npm''
+          node-version: '18'
+          cache: 'npm'
 
       - name: Build Backend (Maven)
         working-directory: ${{ env.BACKEND_DIR }}
@@ -71,8 +71,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ''18''
-          cache: ''npm''
+          node-version: '18'
+          cache: 'npm'
 
       - name: Frontend Lint
         working-directory: ${{ env.FRONTEND_DIR }}
@@ -92,8 +92,8 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: eclipse-temurin:21-jre-alpine
-          format: ''sarif''
-          output: ''trivy-backend.sarif''
+          format: 'sarif'
+          output: 'trivy-backend.sarif'
         continue-on-error: true
 
       - name: Upload Trivy Results
@@ -129,8 +129,8 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: ''21''
-          distribution: ''temurin''
+          java-version: '21'
+          distribution: 'temurin'
           cache: maven
 
       - name: Wait for PostgreSQL
@@ -156,8 +156,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ''18''
-          cache: ''npm''
+          node-version: '18'
+          cache: 'npm'
 
       - name: Run Frontend Tests
         working-directory: ${{ env.FRONTEND_DIR }}
@@ -252,7 +252,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: build_docker_images
-    if: github.event_name == ''push'' && github.ref == ''refs/heads/main'' && success()
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' && success()
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
